--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -37,6 +37,7 @@ jobs:
 
       # Deploy ARM template
     - name: Run ARM deploy
+      run: pwd
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
