--- a/.github/workflows/deployDev.yml
+++ b/.github/workflows/deployDev.yml
@@ -41,7 +41,7 @@ jobs:
       with:
         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
         resourceGroupName: ${{ secrets.AZURE_RG }}
-        template: ../ARM-Templates/container-webapp-template.json
+        template: ./ARM-Templates/container-webapp-template.json
         parameters: storageAccountType=Standard_LRS
 
       # output containerName variable from template
