--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,11 +3,11 @@ name: .NET
 on:
   push:
     paths: 
-    - './Application'
+    - './Application/**'
     - '.github/workflows/dotnet.yml'
   pull_request:    
     paths: 
-    - './Application'
+    - './Application/**'
     - '.github/workflows/dotnet.yml'
 
 jobs:
