--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET
+      uses: asdf
       uses: actions/setup-dotnet@v1
     - name: Restore dependencies
       run: dotnet restore ./Application/src/RazorPagesTestSample/RazorPagesTestSample.csproj
