--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,7 +51,7 @@ jobs:
       steps:
       - uses: actions/checkout@v2
       - name: Docker login
-         run: docker $registryName -u ACR_USERNAME -p ACR_PASSWORD
+         run: docker login $registryName -u ACR_USERNAME -p ACR_PASSWORD
       - name: Docker build
          run: docker build -t $registryName/$repositoryName:$tag --build-arg build_version=$tag $dockerFolderPath
       - name: Docker push
