Fixed Docker syntax again2

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,9 +15,9 @@ on:
     - 'Application/**'
     - '.github/workflows/dotnet.yml'
 
-jobs:
-  build:
-
+jobs: 
+  DotNet: 
+   
     runs-on: ubuntu-latest
 
     steps:
@@ -42,17 +42,15 @@ jobs:
             title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
             body: body
           });
+  Docker:
 
-  jobs:
-    build:
+    runs-on: ubuntu-latest
 
-      runs-on: ubuntu-latest
-
-      steps:
-      - uses: actions/checkout@v2
-      - name: Docker login
-        run: docker login $registryName -u ACR_USERNAME -p ACR_PASSWORD
-      - name: Docker build
-        run: docker build -t $registryName/$repositoryName:$tag --build-arg build_version=$tag $dockerFolderPath
-      - name: Docker push
-        run: docker push $registryName/$repositoryName:$tag
+    steps:
+    - uses: actions/checkout@v2
+    - name: Docker login
+      run: docker login $registryName -u ACR_USERNAME -p ACR_PASSWORD
+    - name: Docker build
+      run: docker build -t $registryName/$repositoryName:$tag --build-arg build_version=$tag $dockerFolderPath
+    - name: Docker push
+      run: docker push $registryName/$repositoryName:$tag
