Changed dotnet.yml to require .NET build to be successful

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,8 +42,9 @@ jobs:
             title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
             body: body
           });
+    
   Docker:
-
+    needs: DotNet
     runs-on: ubuntu-latest
 
     steps:
