--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -56,8 +56,10 @@ jobs:
     - name: Docker push
       run: docker push $registryName/$repositoryName:$tag
 
-  Deploy:
+  DeployDev:
     needs: Docker
+    environment:
+      name: DEV
     runs-on: ubuntu-latest
 
     steps:
@@ -68,6 +70,25 @@ jobs:
     - uses: azure/webapps-deploy@v2
       with:
         app-name: 'htwh1devops-dev'
+        images: '${{ secrets.ACR_LOGIN_SERVER }}/wth/dotnetcoreapp:${{ github.run_number }}'
+    - name: Azure logout
+      run: |
+        az logout    
+
+  DeployTest:
+    needs: DeployDev
+    environment:
+      name: TEST
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: 'Login via Azure CLI'
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+    - uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'htwh1devops-test'
         images: '${{ secrets.ACR_LOGIN_SERVER }}/wth/dotnetcoreapp:${{ github.run_number }}'
     - name: Azure logout
       run: |
